--- a/src/create-account.html
+++ b/src/create-account.html
@@ -12,74 +12,83 @@
   
 </head>
 <body>
-  <div class="project">
+  <div class="project py-4 px-2 p-lg-6">
     <main class="page-content">
       <div class="container">
         <div class="row justify-content-center align-items-center">
-          <div class="md shadow-lg rounded-3">
+          <div class="col-lg-11">
+            <div class="md bg-light shadow-lg rounded-3 mx-auto py-6 px-2 p-lg-6 position-relative">
+              <div class="row">
+                <div class="col-lg-6">
+                  <a href="index.html" class="logo logo-md d-block mb-5">
+                    <img src="images/logo.svg" alt="ZoomTender" class="img-fluid d-block mx-auto">
+                  </a>
 
-            <div class="row">
-              <div class="col-lg-6">
-                <img src="images/logo.svg" alt="ZoomTender" class="img-fluid d-block mx-auto">
+                  <div class="step">
+                    <ul class="list-unstyled">
+                      <li class="position-relative d-flex align-items-center">
+                        <strong class="fw-bolder border rounded-circle me-30">1</strong>
+                        <span>Create a tender</span>
+                      </li>
+                      <li class="position-relative d-flex align-items-center">
+                        <strong class="fw-bolder border rounded-circle me-30">2</strong>
+                        <span>Create a tender</span>
+                      </li>
+                      <li class="position-relative d-flex align-items-center">
+                        <strong class="fw-bolder border rounded-circle me-30">3</strong>
+                        <span>Create a tender</span>
+                      </li>
+                    </ul>
+                  </div>
+                </div>
 
-                <div class="step">
-                  <ul class="list-unstyled">
-                    <li>
-                      <strong class="fw-bolder border rounded-circle">1</strong>
-                      <span>Create a tender</span>
-                    </li>
-                    <li>
-                      <strong class="fw-bolder border rounded-circle">2</strong>
-                      <span>Create a tender</span>
-                    </li>
-                    <li>
-                      <strong class="fw-bolder border rounded-circle">3</strong>
-                      <span>Create a tender</span>
-                    </li>
-                  </ul>
+                <div class="col-lg-6">
+                  <div class="shadow rounded-3 px-6 pt-5 pb-6">
+                    <form class="form">
+                      <h1 class="h4 fw-bolder mb-4">
+                        Create an account
+                      </h1>
+
+                      <div class="mb-4">
+                        <div class="mb-14">
+                          <div class="position-relative">
+                            <input type="text" id="login-email" class="form-control" placeholder="Email">
+                          </div>
+                        </div>
+
+                        <div class="mb-0">
+                          <div class="position-relative">
+                            <input type="password" id="login-password" class="form-control" placeholder="Password">
+                          </div>
+                        </div>
+
+                        <a href="#" class="btn btn-link text-decoration-none">
+                          Forgot your password?
+                        </a>
+                      </div>
+
+                      <button type="submit" class="btn btn-primary w-100">
+                        Log In
+                      </button>
+                    </form>
+                  </div>
                 </div>
               </div>
 
-              <div class="col-lg-6">
-                <div class="sm shadow rounded-3">
-                  <form class="form">
-                    <h1 class="h4">
-                      Create an account
+              <div class="shadow rounded-3 mt-36 py-5 px-6">
+                <div class="row align-items-center">
+                  <div class="col-lg-5">
+                    <img src="images/img-1.svg" alt="" class="img-fluid">
+                  </div>
+                  <div class="col-lg-7">
+                    <h1 class="h4 fw-bolder">
+                      What is a Tender?
                     </h1>
 
-                    <div class="mb-10">
-                      <input type="text" id="login-email" class="form-control" placeholder="Email">
-                    </div>
-
-                    <div class="mb-10">
-                      <input type="password" id="login-password" class="form-control" placeholder="Password">
-                    </div>
-
-                    <a href="#" class="btn btn-link">
-                      Forgot your password?
-                    </a>
-
-                    <button type="submit" class="btn btn-primary w-100">
-                      Log In
-                    </button>
-                  </form>
-                </div>
-              </div>
-            </div>
-
-            <div class="sm shadow rounded-3">
-              <div class="row">
-                <div class="col-lg-5">
-                  <img src="images/img-1.svg" alt="" class="img-fluid">
-                </div>
-                <div class="col-lg-7">
-                  <h1 class="h4">
-                    What is a Tender?
-                  </h1>
-
-                  <p>
-                    Lorem ipsum, dolor sit amet consectetur adipisicing elit. Accusamus, consectetur.
-                  </p>
+                    <p class="fsz-18">
+                      A tender works like a reverse auction. A buyer can invite a tender to buy goods/services and vendor offering those good/sservices can bid on that tender. Once bidding is complete, the buyer may select a vendor with the lowest bid or some other selection criteria.
+                    </p>
+                  </div>
                 </div>
               </div>
             </div>
