--- a/src/registration-contractror-individual.html
+++ b/src/registration-contractror-individual.html
@@ -47,7 +47,9 @@
                             <label for="registration-name" class="col-form-label py-0">Name</label>
                           </div>
                           <div class="col-sm-8 col-lg-7">
-                            <input type="text" id="registration-name" class="form-control" placeholder="Name">
+                            <div class="position-relative">
+                              <input type="text" id="registration-name" class="form-control" placeholder="Name">
+                            </div>
                           </div>
                         </div>
                       </div>
@@ -58,7 +60,9 @@
                             <label for="registration-email" class="col-form-label py-0">E-mail</label>
                           </div>
                           <div class="col-sm-8 col-lg-7">
-                            <input type="text" id="registration-email" class="form-control" placeholder="E-mail">
+                            <div class="position-relative">
+                              <input type="text" id="registration-email" class="form-control" placeholder="E-mail">
+                            </div>
                           </div>
                         </div>
                       </div>
@@ -69,7 +73,9 @@
                             <label for="registration-phone" class="col-form-label py-0">Mobile Phone</label>
                           </div>
                           <div class="col-sm-8 col-lg-7">
-                            <input type="text" id="registration-phone" class="form-control" placeholder="Mobile Phone">
+                            <div class="position-relative">
+                              <input type="text" id="registration-phone" class="form-control" placeholder="Mobile Phone">
+                            </div>
                           </div>
                         </div>
                       </div>
@@ -80,7 +86,9 @@
                             <label for="registration-pass" class="col-form-label py-0">Password</label>
                           </div>
                           <div class="col-sm-8 col-lg-7">
-                            <input type="password" id="registration-pass" class="form-control" placeholder="Password">
+                            <div class="position-relative">
+                              <input type="password" id="registration-pass" class="form-control" placeholder="Password">
+                            </div>
                           </div>
                         </div>
                       </div>
@@ -91,7 +99,9 @@
                             <label for="registration-repass" class="col-form-label py-0">Password confirmation</label>
                           </div>
                           <div class="col-sm-8 col-lg-7">
-                            <input type="password" id="registration-repass" class="form-control" placeholder="Password confirmation">
+                            <div class="position-relative">
+                              <input type="password" id="registration-repass" class="form-control" placeholder="Password confirmation">
+                            </div>
                           </div>
                         </div>
                       </div>
@@ -102,15 +112,17 @@
                             <label for="registration-image" class="col-form-label py-0">Image/Logo</label>
                           </div>
                           <div class="col-sm-8 col-lg-7">
-                            <div class="file d-flex align-items-center">
-                              <a href="#" class="btn btn-light">
-                                Choose File
-                              </a>
-                              <span class="form-label">
-                                No file chosen
-                              </span>
+                            <div class="position-relative">
+                              <div class="file d-sm-flex align-items-center">
+                                <a href="#" class="btn btn-light">
+                                  Choose File
+                                </a>
+                                <span class="form-label">
+                                  No file chosen
+                                </span>
+                              </div>
+                              <!-- <input class="form-control" type="file" id="registration-image"> -->
                             </div>
-                            <!-- <input class="form-control" type="file" id="registration-image"> -->
                           </div>
                         </div>
                       </div>
@@ -121,7 +133,9 @@
                             <label for="registration-desc" class="col-form-label py-0">Description</label>
                           </div>
                           <div class="col-sm-8 col-lg-7">
-                            <textarea id="registration-desc" rows="4" class="form-control" placeholder="Description"></textarea>
+                            <div class="position-relative">
+                              <textarea id="registration-desc" rows="4" class="form-control" placeholder="Description"></textarea>
+                            </div>
                           </div>
                         </div>
                       </div>
@@ -132,7 +146,9 @@
                             <label for="registration-facebook" class="col-form-label py-0">Facebook</label>
                           </div>
                           <div class="col-sm-8 col-lg-7">
-                            <input type="text" id="registration-facebook" class="form-control" placeholder="Facebook">
+                            <div class="position-relative">
+                              <input type="text" id="registration-facebook" class="form-control" placeholder="Facebook">
+                            </div>
                           </div>
                         </div>
                       </div>
@@ -143,7 +159,9 @@
                             <label for="registration-twitter" class="col-form-label py-0">Twitter</label>
                           </div>
                           <div class="col-sm-8 col-lg-7">
-                            <input type="text" id="registration-twitter" class="form-control" placeholder="Twitter">
+                            <div class="position-relative">
+                              <input type="text" id="registration-twitter" class="form-control" placeholder="Twitter">
+                            </div>
                           </div>
                         </div>
                       </div>
@@ -154,7 +172,9 @@
                             <label for="registration-google" class="col-form-label py-0">Google+</label>
                           </div>
                           <div class="col-sm-8 col-lg-7">
-                            <input type="text" id="registration-google" class="form-control" placeholder="Google+">
+                            <div class="position-relative">
+                              <input type="text" id="registration-google" class="form-control" placeholder="Google+">
+                            </div>
                           </div>
                         </div>
                       </div>
@@ -165,7 +185,9 @@
                             <label for="registration-linkedin" class="col-form-label py-0">LinkedIn</label>
                           </div>
                           <div class="col-sm-8 col-lg-7">
-                            <input type="text" id="registration-linkedin" class="form-control" placeholder="LinkedIn">
+                            <div class="position-relative">
+                              <input type="text" id="registration-linkedin" class="form-control" placeholder="LinkedIn">
+                            </div>
                           </div>
                         </div>
                       </div>
@@ -176,12 +198,14 @@
                             <label for="registration-experience" class="col-form-label py-0">Years of Experience</label>
                           </div>
                           <div class="col-sm-8 col-lg-7">
-                            <select class="form-select" id="registration-experience" aria-label="Years of Experience">
-                              <option selected>Years of Experience</option>
-                              <option value="1">One</option>
-                              <option value="2">Two</option>
-                              <option value="3">Three</option>
-                            </select>
+                            <div class="position-relative">
+                              <select class="form-select" id="registration-experience" aria-label="Years of Experience">
+                                <option selected>Years of Experience</option>
+                                <option value="1">One</option>
+                                <option value="2">Two</option>
+                                <option value="3">Three</option>
+                              </select>
+                            </div>
                           </div>
                         </div>
                       </div>
@@ -202,9 +226,7 @@
                             </div>
                           </div>
                         </div>
-                      </div>
-
-                      
+                      </div>                      
 
                       <div class="row justify-content-center">
                         <div class="col-sm-8 col-lg-7 mb-10">
