--- a/src/registration-employer.html
+++ b/src/registration-employer.html
@@ -50,7 +50,9 @@
                           </div>
                           <div class="col-sm-8 col-lg-7">
                             <div class="position-relative is-invalid">
-                              <input type="text" id="registration-email" class="form-control" value="chernyakvasyl@gmai...">
+                              <div class="position-relative">
+                                <input type="text" id="registration-email" class="form-control" value="chernyakvasyl@gmai...">
+                              </div>
                             </div>
                           </div>
                         </div>
@@ -62,7 +64,9 @@
                             <label for="registration-pass" class="col-form-label py-0">Password</label>
                           </div>
                           <div class="col-sm-8 col-lg-7">
-                            <input type="password" id="registration-pass" class="form-control" placeholder="Password">
+                            <div class="position-relative">
+                              <input type="password" id="registration-pass" class="form-control" placeholder="Password">
+                            </div>
                           </div>
                         </div>
                       </div>
@@ -73,7 +77,9 @@
                             <label for="registration-repass" class="col-form-label py-0">Password confirmation</label>
                           </div>
                           <div class="col-sm-8 col-lg-7">
-                            <input type="password" id="registration-repass" class="form-control" placeholder="Password confirmation">
+                            <div class="position-relative">
+                              <input type="password" id="registration-repass" class="form-control" placeholder="Password confirmation">
+                            </div>
                           </div>
                         </div>
                       </div>
@@ -84,13 +90,15 @@
                             <label for="registration-image" class="col-form-label py-0">Image/Logo</label>
                           </div>
                           <div class="col-sm-8 col-lg-7">
-                            <div class="file d-flex align-items-center">
-                              <a href="#" class="btn btn-light">
-                                Choose File
-                              </a>
-                              <span class="form-label">
-                                No file chosen
-                              </span>
+                            <div class="position-relative">
+                              <div class="file d-sm-flex align-items-center">
+                                <a href="#" class="btn btn-light">
+                                  Choose File
+                                </a>
+                                <span class="form-label">
+                                  No file chosen
+                                </span>
+                              </div>
                             </div>
                             <!-- <input class="form-control" type="file" id="registration-image"> -->
                           </div>
@@ -103,7 +111,9 @@
                             <label for="registration-desc" class="col-form-label py-0">Description</label>
                           </div>
                           <div class="col-sm-8 col-lg-7">
-                            <textarea id="registration-desc" rows="4" class="form-control" placeholder="Description"></textarea>
+                            <div class="position-relative">
+                              <textarea id="registration-desc" rows="4" class="form-control" placeholder="Description"></textarea>
+                            </div>
                           </div>
                         </div>
                       </div>
@@ -114,7 +124,9 @@
                             <label for="registration-facebook" class="col-form-label py-0">Facebook</label>
                           </div>
                           <div class="col-sm-8 col-lg-7">
-                            <input type="text" id="registration-facebook" class="form-control" placeholder="Facebook">
+                            <div class="position-relative">
+                              <input type="text" id="registration-facebook" class="form-control" placeholder="Facebook">
+                            </div>
                           </div>
                         </div>
                       </div>
@@ -125,7 +137,9 @@
                             <label for="registration-twitter" class="col-form-label py-0">Twitter</label>
                           </div>
                           <div class="col-sm-8 col-lg-7">
-                            <input type="text" id="registration-twitter" class="form-control" placeholder="Twitter">
+                            <div class="position-relative">
+                              <input type="text" id="registration-twitter" class="form-control" placeholder="Twitter">
+                            </div>
                           </div>
                         </div>
                       </div>
@@ -136,7 +150,9 @@
                             <label for="registration-google" class="col-form-label py-0">Google+</label>
                           </div>
                           <div class="col-sm-8 col-lg-7">
-                            <input type="text" id="registration-google" class="form-control" placeholder="Google+">
+                            <div class="position-relative">
+                              <input type="text" id="registration-google" class="form-control" placeholder="Google+">
+                            </div>
                           </div>
                         </div>
                       </div>
@@ -147,7 +163,9 @@
                             <label for="registration-linkedin" class="col-form-label py-0">LinkedIn</label>
                           </div>
                           <div class="col-sm-8 col-lg-7">
-                            <input type="text" id="registration-linkedin" class="form-control" placeholder="LinkedIn">
+                            <div class="position-relative">
+                              <input type="text" id="registration-linkedin" class="form-control" placeholder="LinkedIn">
+                            </div>
                           </div>
                         </div>
                       </div>
@@ -158,12 +176,14 @@
                             <label for="registration-business-type" class="col-form-label py-0">Business Type</label>
                           </div>
                           <div class="col-sm-8 col-lg-7">
-                            <select class="form-select" id="registration-business-type" aria-label="Business Type">
-                              <option selected>Business Type</option>
-                              <option value="1">One</option>
-                              <option value="2">Two</option>
-                              <option value="3">Three</option>
-                            </select>
+                            <div class="position-relative">
+                              <select class="form-select" id="registration-business-type" aria-label="Business Type">
+                                <option selected>Business Type</option>
+                                <option value="1">One</option>
+                                <option value="2">Two</option>
+                                <option value="3">Three</option>
+                              </select>
+                            </div>
                           </div>
                         </div>
                       </div>
@@ -174,12 +194,14 @@
                             <label for="registration-turnover" class="col-form-label py-0">Turnover</label>
                           </div>
                           <div class="col-sm-8 col-lg-7">
-                            <select class="form-select" id="registration-turnover" aria-label="Turnover">
-                              <option selected>Turnover</option>
-                              <option value="1">One</option>
-                              <option value="2">Two</option>
-                              <option value="3">Three</option>
-                            </select>
+                            <div class="position-relative">
+                              <select class="form-select" id="registration-turnover" aria-label="Turnover">
+                                <option selected>Turnover</option>
+                                <option value="1">One</option>
+                                <option value="2">Two</option>
+                                <option value="3">Three</option>
+                              </select>
+                            </div>
                           </div>
                         </div>
                       </div>
@@ -190,12 +212,14 @@
                             <label for="registration-number-emloyees" class="col-form-label py-0">Number of Emloyees</label>
                           </div>
                           <div class="col-sm-8 col-lg-7">
-                            <select class="form-select" id="registration-number-emloyees" aria-label="Number of Emloyees">
-                              <option selected>Number of Emloyees</option>
-                              <option value="1">One</option>
-                              <option value="2">Two</option>
-                              <option value="3">Three</option>
-                            </select>
+                            <div class="position-relative">
+                              <select class="form-select" id="registration-number-emloyees" aria-label="Number of Emloyees">
+                                <option selected>Number of Emloyees</option>
+                                <option value="1">One</option>
+                                <option value="2">Two</option>
+                                <option value="3">Three</option>
+                              </select>
+                            </div>
                           </div>
                         </div>
                       </div>               
