--- a/src/reset-password.html
+++ b/src/reset-password.html
@@ -17,9 +17,9 @@
       <div class="container">
         <div class="row justify-content-center align-items-center">
           <div class="col-lg-11">
-            <div class="md bg-light shadow-lg rounded-3 mx-auto py-6 px-2 p-lg-6 position-relative">
+            <div class="md bg-light shadow-lg rounded-3 mx-auto py-4 py-lg-6 px-2 p-lg-6 position-relative">
               <div class="row">
-                <div class="col-lg-6">
+                <div class="col-md-4 col-lg-6">
                   <a href="index.html" class="logo logo-md d-block mb-5">
                     <img src="images/logo.svg" alt="ZoomTender" class="img-fluid d-block mx-auto">
                   </a>
@@ -42,8 +42,8 @@
                   </div>
                 </div>
 
-                <div class="col-lg-6">
-                  <div class="shadow rounded-3 px-6 pt-5 pb-6">
+                <div class="col-md-8 col-lg-6">
+                  <div class="shadow rounded-3 p-3 p-md-4 px-lg-6 pt-lg-5 pb-lg-6">
                     <form class="form">
                       <div class="text-center pb-4">
                         <h1 class="h4 fw-bolder mb-3">
@@ -71,12 +71,12 @@
                 </div>
               </div>
 
-              <div class="shadow rounded-3 mt-36 py-5 px-6">
+              <div class="shadow rounded-3 mt-36 p-3 p-md-4 py-lg-5 px-lg-6">
                 <div class="row align-items-center">
-                  <div class="col-lg-5">
+                  <div class="col-md-4 col-lg-5">
                     <img src="images/img-1.svg" alt="" class="img-fluid">
                   </div>
-                  <div class="col-lg-7">
+                  <div class="col-md-8 col-lg-7">
                     <h1 class="h4 fw-bolder">
                       What is a Tender?
                     </h1>
