--- a/src/profile.html
+++ b/src/profile.html
@@ -165,7 +165,7 @@
                       </a>
                     </div>
 
-                    <div class="shadow rounded-3 pt-3 px-2 pb-36 px-lg-20">
+                    <div class="bg-white shadow rounded-3 pt-3 px-2 pb-36 px-lg-20">
                       <h1 class="h1 fw-bolder">My Profile</h1>
 
                       <div class="row justify-content-between">
