--- a/src/bids.html
+++ b/src/bids.html
@@ -171,8 +171,8 @@
                         List of Active Tenders you have bid on
                       </h6>
                       
-                      <div class="table-responsive mb-30">
-                        <table class="table table-striped ">
+                      <div class="table-responsive table-x mb-30">
+                        <table class="table table-striped">
                           <thead>
                             <tr>
                               <th><div>Tender</div></th>
