--- a/src/notifications.html
+++ b/src/notifications.html
@@ -167,6 +167,34 @@
 
                     <div class="bg-white shadow rounded-3 pt-3 px-2 pb-36 px-lg-20">
                       <h1 class="h1 fw-bolder">Notifications</h1>
+
+                      <div class="pb-3">
+                        <div class="card mb-2">
+                          <div class="card-body pb-1">
+                            <h6 class="card-title">
+                              <a href="#">
+                                Emp1 closed tender of Bricks and stuff
+                              </a>
+                            </h6>
+                            <p class="card-text">
+                              2 years, 2 months ago
+                            </p>
+                          </div>
+                        </div>
+
+                        <div class="card mb-2">
+                          <div class="card-body pb-1">
+                            <h6 class="card-title">
+                              <a href="#">
+                                Emp1 closed tender of Bricks and stuff
+                              </a>
+                            </h6>
+                            <p class="card-text">
+                              2 years, 2 months ago
+                            </p>
+                          </div>
+                        </div>
+                      </div>
                       
                       <nav aria-label="...">
                         <ul class="pagination justify-content-center">
