--- a/src/password.html
+++ b/src/password.html
@@ -34,15 +34,49 @@
                       </h6>
                       
                       <form class="form">
+                        <div class="row g-0 mb-4">
+                          <div class="col-lg-4">
+                            <div class="mb-10">
+                              <div class="password position-relative">
+                                <input type="password" class="form-control" placeholder="Password">
+                                <a href="#" class="btn position-absolute top-0 end-0">
+                                  <svg class="icon icon-eye"><use xlink:href="#icon-eye"></use></svg>
+                                </a>
+                              </div>
+                              <a href="#" class="btn btn-link text-decoration-none">
+                                Forgot your password?
+                              </a>
+                            </div>
+
+                            <div class="mb-10">
+                              <div class="password position-relative is-valid">
+                                <input type="password" class="form-control" value="Password">
+                                <a href="#" class="btn position-absolute top-0 end-0">
+                                  <svg class="icon icon-eye"><use xlink:href="#icon-eye"></use></svg>
+                                </a>
+                              </div>
+                            </div>
+
+                            <div class="mb-10">
+                              <div class="password position-relative is-valid">
+                                <input type="text" class="form-control" value="Password">
+                                <a href="#" class="btn position-absolute top-0 end-0">
+                                  <svg class="icon icon-eye"><use xlink:href="#icon-eye"></use></svg>
+                                </a>
+                              </div>
+                            </div>
+                          </div>
+                        </div>
+
                         <div class="row g-2">
-                          <div class="col-5">
-                            <button type="submit" class="btn btn-primary w-100">
+                          <div class="col-auto">
+                            <button type="submit" class="btn btn-primary px-4">
                               Change Password
                             </button>
                           </div>
 
-                          <div class="col-5">
-                            <button type="submit" class="btn btn-light w-100">
+                          <div class="col-auto">
+                            <button type="submit" class="btn btn-light px-4">
                               Cancel
                             </button>
                           </div>
