--- a/src/authorization/registration-contractror-company.html
+++ b/src/authorization/registration-contractror-company.html
@@ -19,7 +19,7 @@
           <div class="col-lg-11">
             <div class="md bg-light shadow-lg rounded-3 mx-auto py-6 px-2 p-lg-6 position-relative">
               <a href="index.html" class="position-absolute m-4 top-0 start-0 logo logo-xs">
-                <img src="images/logo.svg" alt="ZoomTender" class="img-fluid d-block mx-auto">
+                <img src="../images/logo.svg" alt="ZoomTender" class="img-fluid d-block mx-auto">
               </a>
 
               <div class="row justify-content-center">
@@ -306,7 +306,7 @@
       </div>
     </main>
   </div>
-  @require('./components/sprite.html')
+  @require('./../components/sprite.html')
 </body>
 
 </html>
