--- a/src/authorization/signup.html
+++ b/src/authorization/signup.html
@@ -22,11 +22,11 @@
                 <div class="row justify-content-center">
                   <div class="col-lg-9">
                     <div class="sm sm-x mx-auto">
-                      <a href="index.html" class="logo-md logo d-block">
-                        <img src="images/logo.svg" alt="ZoomTender" class="img-fluid d-block mx-auto mb-20 ">
+                      <a href="index.html" class="logo-md logo d-block mx-auto">
+                        <img src="../images/logo.svg" alt="ZoomTender" class="img-fluid d-block mx-auto mb-20 ">
                       </a>                      
 
-                      <img src="images/img-4.svg" alt="SignUp an account" class="img-fluid d-block mx-auto mb-3">
+                      <img src="../images/img-4.svg" alt="SignUp an account" class="img-fluid d-block mx-auto mb-3">
 
                       <h1 class="h4 fw-bolder mb-30">
                         Sign up an account
@@ -55,7 +55,7 @@
       </div>
     </main>
   </div>
-  @require('./components/sprite.html')
+  @require('./../components/sprite.html')
 </body>
 
 </html>
