--- a/src/contractor-view/email.html
+++ b/src/contractor-view/email.html
@@ -20,81 +20,81 @@
             <div class="lg bg-light shadow-lg rounded-3 mx-auto position-relative">
               <div class="row g-0">
                 <div class="col-lg-2">
-                  @require('./components/menu.html')
+                  @require('./../components/menu-contractor.html')
                 </div>
 
                 <div class="col-lg-10">
                   <div class="position-relative px-2 py-lg-6 px-lg-30">
-                    @require('./components/navbar.html')
+                    @require('./../components/navbar.html')
 
                     <div class="bg-white shadow rounded-3 pt-3 px-2 pb-36 px-lg-20">
-                      <h1 class="h1 fw-bolder">Notifications</h1>
+                      <h1 class="h1 fw-bolder">E-mail</h1>
                       <h6 class="fsz-18 mb-20">
-                        Select type of notification you would like to receive
+                        E-mail settings
                       </h6>
                       
                       <form class="form">
                         <ul class="list-unstyled mb-3">
                           <li class="mb-2">
                             <div class="form-check">
-                              <input class="form-check-input" type="checkbox" value="" id="Notifications1">
-                              <label class="form-check-label" for="Notifications1">
+                              <input class="form-check-input" type="checkbox" value="" id="Email1">
+                              <label class="form-check-label" for="Email1">
                                 <small class="fw-normal">Change in Tender</small>
                               </label>
                             </div>
                           </li>
                           <li class="mb-2">
                             <div class="form-check">
-                              <input class="form-check-input" type="checkbox" value="" id="Notifications2">
-                              <label class="form-check-label" for="Notifications2">
+                              <input class="form-check-input" type="checkbox" value="" id="Email2">
+                              <label class="form-check-label" for="Email2">
                                 <small class="fw-normal">Withdraw of Tender</small>
                               </label>
                             </div>
                           </li>
                           <li class="mb-2">
                             <div class="form-check">
-                              <input class="form-check-input" type="checkbox" value="" id="Notifications3">
-                              <label class="form-check-label" for="Notifications3">
+                              <input class="form-check-input" type="checkbox" value="" id="Email3">
+                              <label class="form-check-label" for="Email3">
                                 <small class="fw-normal">End of Tender</small>
                               </label>
                             </div>
                           </li>
                           <li class="mb-2">
                             <div class="form-check">
-                              <input class="form-check-input" type="checkbox" value="" id="Notifications4">
-                              <label class="form-check-label" for="Notifications4">
+                              <input class="form-check-input" type="checkbox" value="" id="Email4">
+                              <label class="form-check-label" for="Email4">
                                 <small class="fw-normal">Private message</small>
                               </label>
                             </div>
                           </li>
                           <li class="mb-2">
                             <div class="form-check">
-                              <input class="form-check-input" type="checkbox" value="" id="Notifications5">
-                              <label class="form-check-label" for="Notifications5">
+                              <input class="form-check-input" type="checkbox" value="" id="Email5">
+                              <label class="form-check-label" for="Email5">
                                 <small class="fw-normal">Reminder to Invited Companies before deadline</small>
                               </label>
                             </div>
                           </li>
                           <li class="mb-2">
                             <div class="form-check">
-                              <input class="form-check-input" type="checkbox" value="" id="Notifications6">
-                              <label class="form-check-label" for="Notifications6">
+                              <input class="form-check-input" type="checkbox" value="" id="Email6">
+                              <label class="form-check-label" for="Email6">
                                 <small class="fw-normal">Bid Submission</small>
                               </label>
                             </div>
                           </li>
                           <li class="mb-2">
                             <div class="form-check">
-                              <input class="form-check-input" type="checkbox" value="" id="Notifications7">
-                              <label class="form-check-label" for="Notifications7">
+                              <input class="form-check-input" type="checkbox" value="" id="Email7">
+                              <label class="form-check-label" for="Email7">
                                 <small class="fw-normal">Invite to Tender</small>
                               </label>
                             </div>
                           </li>
                           <li class="mb-2">
                             <div class="form-check">
-                              <input class="form-check-input" type="checkbox" value="" id="Notifications8">
-                              <label class="form-check-label" for="Notifications8">
+                              <input class="form-check-input" type="checkbox" value="" id="Email8">
+                              <label class="form-check-label" for="Email8">
                                 <small class="fw-normal">Cancel invite to Tender</small>
                               </label>
                             </div>
@@ -115,7 +115,7 @@
       </div>
     </main>
   </div>
-  @require('./components/sprite.html')
+  @require('./../components/sprite.html')
 </body>
 
 </html>
