--- a/src/contractor-view/profile.html
+++ b/src/contractor-view/profile.html
@@ -20,19 +20,19 @@
             <div class="lg bg-light shadow-lg rounded-3 mx-auto position-relative">
               <div class="row g-0">
                 <div class="col-lg-2">
-                  @require('./components/menu.html')
+                  @require('./../components/menu-contractor.html')
                 </div>
 
                 <div class="col-lg-10">
                   <div class="position-relative px-2 py-lg-6 px-lg-30">
-                    @require('./components/navbar.html')
+                    @require('./../components/navbar.html')
 
                     <div class="bg-white shadow rounded-3 pt-3 px-2 pb-36 px-lg-20">
                       <h1 class="h1 fw-bolder">My Profile</h1>
 
                       <div class="row justify-content-between">
                         <div class="col-md-4 mb-4">
-                          <img src="images/photo.png" alt="" class="img-fluid d-block">
+                          <img src="../images/photo.png" alt="" class="img-fluid d-block">
                           <a href="#" class="btn btn-link">
                             Change the image
                           </a>
@@ -137,7 +137,7 @@
       </div>
     </main>
   </div>
-  @require('./components/sprite.html')
+  @require('./../components/sprite.html')
 </body>
 
 </html>
