--- a/src/index.html
+++ b/src/index.html
@@ -18,7 +18,7 @@
     <main class="page-content">  
 			<div class="container">
 				<h1 class="h1 fw-bolder">My Bids</h1>
-				<h5>List of Active Tenders you have bid on</h5>
+				<h6 class="fsz-18 mb-20">List of Active Tenders you have bid on</h6>
 
 				<form class="form">
 					<h1 class="h2 fw-bolder mb-4">
