--- a/src/authorization/create-account.html
+++ b/src/authorization/create-account.html
@@ -21,7 +21,7 @@
               <div class="row">
                 <div class="col-md-4 col-lg-6">
                   <a href="index.html" class="logo logo-md d-block mb-5">
-                    <img src="images/logo.svg" alt="ZoomTender" class="img-fluid d-block mx-auto">
+                    <img src="../images/logo.svg" alt="ZoomTender" class="img-fluid d-block mx-auto">
                   </a>
 
                   <div class="step">
@@ -78,7 +78,7 @@
               <div class="shadow rounded-3 mt-36 p-3 p-md-4 py-lg-5 px-lg-6">
                 <div class="row align-items-center">
                   <div class="col-md-4 col-lg-5 mb-3 mb-lg-0">
-                    <img src="images/img-1.svg" alt="" class="img-fluid">
+                    <img src="../images/img-1.svg" alt="" class="img-fluid">
                   </div>
                   <div class="col-md-8 col-lg-7">
                     <h1 class="h4 fw-bolder">
@@ -97,7 +97,7 @@
       </div>
     </main>
   </div>
-  @require('./components/sprite.html')
+  @require('./../components/sprite.html')
 </body>
 
 </html>
