--- a/src/contractor-view/inbox-messages.html
+++ b/src/contractor-view/inbox-messages.html
@@ -20,12 +20,12 @@
             <div class="lg bg-light shadow-lg rounded-3 mx-auto position-relative">
               <div class="row g-0">
                 <div class="col-lg-2">
-                  @require('./components/menu.html')
+                  @require('./../components/menu-contractor.html')
                 </div>
 
                 <div class="col-lg-10">
                   <div class="position-relative px-2 py-lg-6 px-lg-30">
-                    @require('./components/navbar.html')
+                    @require('./../components/navbar.html')
 
                     <div class="bg-white shadow rounded-3 pt-3 px-2 pb-36 px-lg-20">
                       <h1 class="h1 fw-bolder">Inbox messages</h1>
@@ -51,44 +51,7 @@
                         </table>
                       </div>
 
-                      <div class="modal fade" id="inboxMessage1" tabindex="-1" aria-labelledby="inboxMessage1Label" aria-hidden="true">
-                        <div class="modal-dialog">
-                          <div class="modal-content">
-                            <div class="modal-header">
-                              <h5 class="modal-title" id="exampleModalLabel">&nbsp;</h5>
-                              <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
-                            </div>
-                            <div class="modal-body pt-0">
-                              <ul class="list-unstyled mb-30 lh-lg">
-                                <li class="mb-3 d-flex">
-                                  <span class="form-label me-2">Subject:</span>
-                                  <small>Amet </small>
-                                </li>
-                                <li class="mb-3 d-flex">
-                                  <span class="form-label me-2">Sender:</span>
-                                  <small>Floyd Miles</small>
-                                </li>
-                                <li class="mb-3 d-flex">
-                                  <span class="form-label me-2">Date:</span>
-                                  <small>11/07/2021   11:53</small>
-                                </li>
-                                <li class="mb-3 d-flex">
-                                  <span class="form-label me-2">Recipient:</span>
-                                  <small>s1</small>
-                                </li>
-                                <li class="mb-3 d-flex">
-                                  <span class="form-label me-2">Message:</span>
-                                  <small>Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet sint. Velit officia consequat duis enim velit mollit. Exercitation veniam consequat sunt </small>
-                                </li>
-                              </ul>
-                            </div>
-                            <div class="modal-footer justify-content-start pb-36 pt-0">                              
-                              <button type="button" class="btn btn-primary px-4">Reply</button>
-                              <button type="button" class="btn btn-danger px-4" data-bs-dismiss="modal">Delete</button>
-                            </div>
-                          </div>
-                        </div>
-                      </div>
+                      @require('./../components/modal.html')
 
                       <nav aria-label="...">
                         <ul class="pagination justify-content-center">
@@ -121,7 +84,7 @@
       </div>
     </main>
   </div>
-  @require('./components/sprite.html')
+  @require('./../components/sprite.html')
 </body>
 
 </html>
